; ModuleID = '/home/carl/AnghaBench/linux/net/sctp/extr_ulpqueue.c_sctp_ulpq_skip.c'
source_filename = "/home/carl/AnghaBench/linux/net/sctp/extr_ulpqueue.c_sctp_ulpq_skip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sctp_ulpq = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.sctp_stream }
%struct.sctp_stream = type { i32 }

@in = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sctp_ulpq_skip(%struct.sctp_ulpq* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sctp_ulpq*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.sctp_stream*, align 8
  store %struct.sctp_ulpq* %0, %struct.sctp_ulpq** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.sctp_ulpq*, %struct.sctp_ulpq** %4, align 8
  %9 = getelementptr inbounds %struct.sctp_ulpq, %struct.sctp_ulpq* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store %struct.sctp_stream* %11, %struct.sctp_stream** %7, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.sctp_stream*, %struct.sctp_stream** %7, align 8
  %14 = load i32, i32* @in, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @sctp_ssn_peek(%struct.sctp_stream* %13, i32 %14, i32 %15)
  %17 = call i64 @SSN_lt(i32 %12, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  br label %29

20:                                               ; preds = %3
  %21 = load %struct.sctp_stream*, %struct.sctp_stream** %7, align 8
  %22 = load i32, i32* @in, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @sctp_ssn_skip(%struct.sctp_stream* %21, i32 %22, i32 %23, i32 %24)
  %26 = load %struct.sctp_ulpq*, %struct.sctp_ulpq** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @sctp_ulpq_reap_ordered(%struct.sctp_ulpq* %26, i32 %27)
  br label %29

29:                                               ; preds = %20, %19
  ret void
}

declare dso_local i64 @SSN_lt(i32, i32) #1

declare dso_local i32 @sctp_ssn_peek(%struct.sctp_stream*, i32, i32) #1

declare dso_local i32 @sctp_ssn_skip(%struct.sctp_stream*, i32, i32, i32) #1

declare dso_local i32 @sctp_ulpq_reap_ordered(%struct.sctp_ulpq*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
